--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,4 +1,11 @@
+// colors
 $black: #0c0c0c;
 $white: #fcfcfc;
+$gray: #555;
+$monitor: #040;
 
+// font
 $font-family: 'Inconsolata', monospace;
+
+// padding
+$desktop-padding: 20px;
