--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -6,3 +6,13 @@ body {
 a {
     color: $white;
 }
+button {
+    appearance: none;
+    padding: 0;
+    background-color: transparent;
+    border: none;
+    font-family: $font-family;
+    color: $white;
+    font-size: 1em;
+    cursor: pointer;
+}
