--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -3,6 +3,8 @@ $black: #0c0c0c;
 $white: #fcfcfc;
 $gray: #555;
 $monitor: #242;
+$green: #0a0;
+$red: #a00;
 
 // font
 $font-family: 'Inconsolata', monospace;
