--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,4 +1,5 @@
 @import 'src/styles/vars';
+@import 'src/styles/transitions';
 
 body {
     overflow: hidden;
@@ -14,5 +15,6 @@ button {
     font-family: $font-family;
     color: $white;
     font-size: 1em;
+    border-radius: 0;
     cursor: pointer;
 }
