--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -11,3 +11,6 @@ $font-family: 'Inconsolata', monospace;
 
 // padding
 $desktop-padding: 20px;
+
+// easings
+$easing-1: cubic-bezier(0.42, 0.01, 0.3, 1);
