WIP on interaction

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -5,7 +5,7 @@ $gray: #555;
 $monitor: #242;
 $green: #0a0;
 $red: #a00;
-$interaction: #5cf;
+$interaction: #08e;
 
 // font
 $font-family: 'Inconsolata', monospace;
